--- a/CrabAnalyze.ipynb
+++ b/CrabAnalyze.ipynb
@@ -29,8 +29,23 @@
       "|  I|1.0375|   0.775|  0.25| 7.95203475|      3.231843|    1.60174675|  2.76407625|  6|\n",
       "|  F| 1.175|  0.8875|  0.25|13.48018725|    4.74854125|    2.28213475|   5.2446575| 10|\n",
       "|  I|0.8875|  0.6625|0.2125| 6.90310325|      3.458639|    1.48834875|     1.70097|  6|\n",
+      "|  F|  1.55|  1.1625|  0.35| 28.6613445|    13.5794105|    6.76135575|   7.2291225|  8|\n",
+      "|  F|   1.3|       1| 0.325|17.70426275|     6.0951425|    5.85417175|    4.819415| 15|\n",
+      "|  M| 1.325|  1.0125| 0.375|23.57260925|      9.979024|     5.3013565|  7.15824875| 10|\n",
+      "|  I|1.5875|    1.25|0.4125| 42.2124055|    20.2698925|    9.76640275| 10.24834425| 13|\n",
+      "|  I|0.9125|  0.6875|0.3375|    6.80388|      3.061746|    1.26155275|  2.08368825|  7|\n",
+      "|  M| 0.825|  0.5375|0.1875| 3.24601775|     1.2757275|    0.75126175|   0.9922325|  6|\n",
+      "|  F|1.3625|    1.05|0.4375|  21.375523|      7.257472|    5.03203625|   7.7961125| 10|\n",
+      "|  M|0.8625|  0.6375| 0.225| 5.68407475|      2.664853|    0.83631025|   1.7860185|  9|\n",
+      "|  I| 1.375|   1.075|0.3625|  20.184844|    8.57572375|      4.309124|   6.3786375| 10|\n",
+      "|  I| 1.225|    0.95|   0.3| 14.9968855|    6.13766675|     3.9405805|   4.3941725| 11|\n",
+      "|  F|1.6375|  1.2875|   0.5|  42.354153|   20.56756225|     8.7599955|  11.4815475| 12|\n",
+      "|  M|   1.6|  1.3125|  0.45|37.23706825|   13.79203175|    8.49067525| 11.55242125| 10|\n",
+      "|  I|1.0625|   0.775| 0.225|  8.5331995|    3.92640575|     1.8427175|     2.26796|  7|\n",
+      "|  M| 1.475|     1.1| 0.375|27.08794725|     10.375917|    6.87475375|   8.3631025| 11|\n",
+      "|  I|0.7625|   0.575|0.1875| 4.12485225|    1.68679525|    0.86465975|    1.417475|  6|\n",
       "+---+------+--------+------+-----------+--------------+--------------+------------+---+\n",
-      "only showing top 5 rows\n",
+      "only showing top 20 rows\n",
       "\n"
      ]
     }
@@ -38,13 +53,150 @@
    "source": [
     "DF = spark.read.option(\"sep\", \",\").option(\"header\", \"true\").csv(\"CrabAgePrediction.csv\")\n",
     "DF.printSchema()\n",
-    "DF.show(5)"
+    "DF.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "90fa70c4-5fb6-4a41-8f71-231cfd3c7f94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+------+--------+------+----------+--------------+--------------+------------+---+\n",
+      "|Sex|Length|Diameter|Height|    Weight|Shucked Weight|Viscera Weight|Shell Weight|Age|\n",
+      "+---+------+--------+------+----------+--------------+--------------+------------+---+\n",
+      "|  F|0.7625|  0.5625| 0.175|4.20990075|    1.65844575|    0.94970825|   1.2757275|  7|\n",
+      "|  F|0.8125|    0.65| 0.225|5.42892925|     2.4097075|      1.020582|    1.757669|  7|\n",
+      "|  F| 0.825|    0.65|   0.2|    5.6699|    1.77184375|      1.417475|    1.984465|  9|\n",
+      "+---+------+--------+------+----------+--------------+--------------+------------+---+\n",
+      "only showing top 3 rows\n",
+      "\n",
+      "+---+------+--------+------+---------+--------------+--------------+------------+---+\n",
+      "|Sex|Length|Diameter|Height|   Weight|Shucked Weight|Viscera Weight|Shell Weight|Age|\n",
+      "+---+------+--------+------+---------+--------------+--------------+------------+---+\n",
+      "|  F|0.6875|  0.4875| 0.175|  2.26796|     0.8788345|    0.60951425|   0.7087375|  5|\n",
+      "|  F| 0.725|   0.525|0.1875|7.7961125|     3.2034935|    1.91359125|   0.9922325|  6|\n",
+      "|  F| 0.725|  0.5625|0.1875|  3.96893|    1.45999925|    0.66621325|     1.13398|  5|\n",
+      "+---+------+--------+------+---------+--------------+--------------+------------+---+\n",
+      "only showing top 3 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights=[0.7, 0.3]\n",
+    "train, test = DF.randomSplit(weights)\n",
+    "train.show(3)\n",
+    "test.show(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e8ddcfc7-147b-4acb-bc6c-34944c0eb972",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2770\n",
+      "1123\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train.count())\n",
+    "print(test.count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d4b6ff87-832b-494b-a63f-86756be4ec6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7368873f-a151-4c7f-97cf-4e1e0e3dfe79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Преобразуйте PySpark DataFrame в pandas DataFrame\n",
+    "DF_pd = DF.toPandas()\n",
+    "\n",
+    "# Преобразуйте pandas DataFrame в массив numpy\n",
+    "df = DF_pd.values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5113989f-1f03-4bf9-b4e2-d1a4df31d26d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[32], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m X \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mdelete(df, \u001b[38;5;241m7\u001b[39m, axis \u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)  \u001b[38;5;66;03m# Признаки\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m y \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAge\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m  \u001b[38;5;66;03m# Целевая переменная\u001b[39;00m\n\u001b[1;32m      3\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m train_test_split(X, y, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.7\u001b[39m)\n\u001b[1;32m      4\u001b[0m knn \u001b[38;5;241m=\u001b[39m KNeighborsRegressor(n_neighbors\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m)  \u001b[38;5;66;03m# Создание модели с количеством соседей равным 5 (можно выбрать другое значение)\u001b[39;00m\n",
+      "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+     ]
+    }
+   ],
+   "source": [
+    "X = np.delete(df, 7, axis =1)  # Признаки\n",
+    "y = df['Age']  # Целевая переменная\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.7)\n",
+    "knn = KNeighborsRegressor(n_neighbors=5)  # Создание модели с количеством соседей равным 5 (можно выбрать другое значение)\n",
+    "knn.fit(X_train, y_train)  # Обучение модели на обучающем наборе данных\n",
+    "score = knn.score(X_test, y_test)\n",
+    "print(\"Оценка результата:\", score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f9340b9e-3fd0-4691-9342-cf266309f2e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['F' '1.4375' '1.175' ... '5.5848515' '6.747181' '9']\n",
+      " ['M' '0.8875' '0.65' ... '1.37495075' '1.5592225' '6']\n",
+      " ['I' '1.0375' '0.775' ... '1.60174675' '2.76407625' '6']\n",
+      " ...\n",
+      " ['I' '0.625' '0.4625' ... '0.52446575' '0.63786375' '5']\n",
+      " ['I' '1.0625' '0.775' ... '2.33883375' '2.9766975' '6']\n",
+      " ['I' '0.7875' '0.6125' ... '1.34660125' '1.417475' '8']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90fa70c4-5fb6-4a41-8f71-231cfd3c7f94",
+   "id": "7153b922-5a92-49be-aa4b-b39f010be095",
    "metadata": {},
    "outputs": [],
    "source": []
