--- a/CrabAnalyze.ipynb
+++ b/CrabAnalyze.ipynb
@@ -116,87 +116,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "d4b6ff87-832b-494b-a63f-86756be4ec6c",
+   "execution_count": 21,
+   "id": "7153b922-5a92-49be-aa4b-b39f010be095",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.model_selection import train_test_split"
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.ml.feature import VectorAssembler\n",
+    "from pyspark.ml.regression import RandomForestRegressor\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "from pyspark.ml import Pipeline\n",
+    "from pyspark.ml.feature import VectorAssembler, StringIndexer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "7368873f-a151-4c7f-97cf-4e1e0e3dfe79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "# Преобразуйте PySpark DataFrame в pandas DataFrame\n",
-    "DF_pd = DF.toPandas()\n",
-    "\n",
-    "# Преобразуйте pandas DataFrame в массив numpy\n",
-    "df = DF_pd.values\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "5113989f-1f03-4bf9-b4e2-d1a4df31d26d",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m X \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mdelete(df, \u001b[38;5;241m7\u001b[39m, axis \u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)  \u001b[38;5;66;03m# Признаки\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m y \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAge\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m  \u001b[38;5;66;03m# Целевая переменная\u001b[39;00m\n\u001b[1;32m      3\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m train_test_split(X, y, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.7\u001b[39m)\n\u001b[1;32m      4\u001b[0m knn \u001b[38;5;241m=\u001b[39m KNeighborsRegressor(n_neighbors\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m)  \u001b[38;5;66;03m# Создание модели с количеством соседей равным 5 (можно выбрать другое значение)\u001b[39;00m\n",
-      "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
-     ]
-    }
-   ],
-   "source": [
-    "X = np.delete(df, 7, axis =1)  # Признаки\n",
-    "y = df['Age']  # Целевая переменная\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.7)\n",
-    "knn = KNeighborsRegressor(n_neighbors=5)  # Создание модели с количеством соседей равным 5 (можно выбрать другое значение)\n",
-    "knn.fit(X_train, y_train)  # Обучение модели на обучающем наборе данных\n",
-    "score = knn.score(X_test, y_test)\n",
-    "print(\"Оценка результата:\", score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "f9340b9e-3fd0-4691-9342-cf266309f2e9",
+   "execution_count": 23,
+   "id": "595fc68b-e661-49b1-819b-96d3578250a8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['F' '1.4375' '1.175' ... '5.5848515' '6.747181' '9']\n",
-      " ['M' '0.8875' '0.65' ... '1.37495075' '1.5592225' '6']\n",
-      " ['I' '1.0375' '0.775' ... '1.60174675' '2.76407625' '6']\n",
-      " ...\n",
-      " ['I' '0.625' '0.4625' ... '0.52446575' '0.63786375' '5']\n",
-      " ['I' '1.0625' '0.775' ... '2.33883375' '2.9766975' '6']\n",
-      " ['I' '0.7875' '0.6125' ... '1.34660125' '1.417475' '8']]\n"
+      "Root Mean Squared Error (RMSE): 2.2457888525180034\n",
+      "+---+------------------+\n",
+      "|Age|        prediction|\n",
+      "+---+------------------+\n",
+      "|  9| 8.153985655438623|\n",
+      "|  7| 9.442842496424916|\n",
+      "|  7|  8.40823684077279|\n",
+      "|  8| 8.776211392921756|\n",
+      "| 10| 8.942188444863922|\n",
+      "|  9| 8.930455739372679|\n",
+      "| 10| 8.942188444863922|\n",
+      "|  7| 9.270945717895014|\n",
+      "|  9|10.426495928906279|\n",
+      "|  9|  9.26693502270785|\n",
+      "| 13|10.883946554610493|\n",
+      "| 13| 9.815345350423065|\n",
+      "|  8| 9.130321617076973|\n",
+      "|  9| 9.577914650467473|\n",
+      "|  8| 9.315936759190802|\n",
+      "|  7|10.093257012069817|\n",
+      "|  8|11.470462568508587|\n",
+      "| 18|  9.55269104639791|\n",
+      "| 16| 11.15613692085816|\n",
+      "| 13|11.215744171442772|\n",
+      "+---+------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(df)"
+    "# Создание SparkSession\n",
+    "spark = SparkSession.builder.appName(\"CrabAgePrediction\").getOrCreate()\n",
+    "# Загружаем датасет\n",
+    "data = spark.read.csv(\"CrabAgePrediction.csv\", header = True, inferSchema = True)\n",
+    "# Преобразуем Пол краба в числа\n",
+    "indexer = StringIndexer(inputCol=\"Sex\", outputCol=\"SexIndex\")\n",
+    "# Преобразовываем данные. Начинаем с выбора признаков\n",
+    "features = [\"SexIndex\", \"Length\", \"Diameter\" , \"Height\", \"Weight\", \"Shucked Weight\", \"Viscera Weight\", \"Shell Weight\"]\n",
+    "# Создаем вектор этих признаков\n",
+    "assembler = VectorAssembler(inputCols=features, outputCol=\"features\")\n",
+    "# Разделяем данные на обучение и тест\n",
+    "(trainingData, testData) = data.randomSplit([0.8, 0.2], seed=12345)\n",
+    "# Создаем модель\n",
+    "rf = RandomForestRegressor(featuresCol = \"features\", labelCol= \"Age\")\n",
+    "# Создаем конвейер\n",
+    "pipeline = Pipeline(stages = [indexer, assembler, rf])\n",
+    "# Обучение модели\n",
+    "model = pipeline.fit(trainingData)\n",
+    "# Предсказание возраста на тестовой выборке\n",
+    "predictions = model.transform(testData)\n",
+    "# Оценка модели\n",
+    "evaluator = RegressionEvaluator(labelCol = \"Age\", predictionCol = \"prediction\", metricName = \"rmse\")\n",
+    "rmse = evaluator.evaluate(predictions)\n",
+    "print(\"Root Mean Squared Error (RMSE): %s\" % rmse)\n",
+    "# Вывод результата и выключение SparkSession\n",
+    "predictions.select(\"Age\", \"prediction\").show()\n",
+    "spark.stop()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7153b922-5a92-49be-aa4b-b39f010be095",
+   "id": "5597d602-0524-4ea1-993e-8869f5635811",
    "metadata": {},
    "outputs": [],
    "source": []
