--- a/CrabAnalyze.ipynb
+++ b/CrabAnalyze.ipynb
@@ -181,7 +181,7 @@
     "# Создаем вектор этих признаков\n",
     "assembler = VectorAssembler(inputCols=features, outputCol=\"features\")\n",
     "# Разделяем данные на обучение и тест\n",
-    "(trainingData, testData) = data.randomSplit([0.8, 0.2], seed=12345)\n",
+    "(trainingData, testData) = data.randomSplit([0.7, 0.у], seed=12345)\n",
     "# Создаем модель\n",
     "rf = RandomForestRegressor(featuresCol = \"features\", labelCol= \"Age\")\n",
     "# Создаем конвейер\n",
