--- a/CrabAnalyze.ipynb
+++ b/CrabAnalyze.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "7153b922-5a92-49be-aa4b-b39f010be095",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "595fc68b-e661-49b1-819b-96d3578250a8",
    "metadata": {},
    "outputs": [
@@ -139,30 +139,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root Mean Squared Error (RMSE): 2.2457888525180034\n",
+      "Root Mean Squared Error (RMSE): 2.2615401627561877\n",
       "+---+------------------+\n",
       "|Age|        prediction|\n",
       "+---+------------------+\n",
-      "|  9| 8.153985655438623|\n",
-      "|  7| 9.442842496424916|\n",
-      "|  7|  8.40823684077279|\n",
-      "|  8| 8.776211392921756|\n",
-      "| 10| 8.942188444863922|\n",
-      "|  9| 8.930455739372679|\n",
-      "| 10| 8.942188444863922|\n",
-      "|  7| 9.270945717895014|\n",
-      "|  9|10.426495928906279|\n",
-      "|  9|  9.26693502270785|\n",
-      "| 13|10.883946554610493|\n",
-      "| 13| 9.815345350423065|\n",
-      "|  8| 9.130321617076973|\n",
-      "|  9| 9.577914650467473|\n",
-      "|  8| 9.315936759190802|\n",
-      "|  7|10.093257012069817|\n",
-      "|  8|11.470462568508587|\n",
-      "| 18|  9.55269104639791|\n",
-      "| 16| 11.15613692085816|\n",
-      "| 13|11.215744171442772|\n",
+      "|  9| 7.988392648316643|\n",
+      "| 10| 7.908705148316645|\n",
+      "|  8| 8.045248288980488|\n",
+      "|  7| 9.548391803438388|\n",
+      "|  7| 8.000412326977736|\n",
+      "|  8| 8.592632589196345|\n",
+      "| 10| 8.720904423833051|\n",
+      "|  9| 9.344447221980165|\n",
+      "| 10| 8.911436173951397|\n",
+      "|  7| 9.440142734707567|\n",
+      "|  7| 9.337883154618444|\n",
+      "|  8|  9.39839418522813|\n",
+      "| 11| 9.443347582927702|\n",
+      "|  6| 9.414458930156876|\n",
+      "|  9|10.059943090170167|\n",
+      "|  9| 9.443347582927702|\n",
+      "| 13| 9.771095354233097|\n",
+      "| 13|11.179394759835631|\n",
+      "|  8| 9.810599704373693|\n",
+      "| 13| 9.386385299029001|\n",
       "+---+------------------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -181,7 +181,7 @@
     "# Создаем вектор этих признаков\n",
     "assembler = VectorAssembler(inputCols=features, outputCol=\"features\")\n",
     "# Разделяем данные на обучение и тест\n",
-    "(trainingData, testData) = data.randomSplit([0.7, 0.у], seed=12345)\n",
+    "(trainingData, testData) = data.randomSplit([0.7, 0.3], seed=12345)\n",
     "# Создаем модель\n",
     "rf = RandomForestRegressor(featuresCol = \"features\", labelCol= \"Age\")\n",
     "# Создаем конвейер\n",
