--- a/CrabAnalyze.ipynb
+++ b/CrabAnalyze.ipynb
@@ -2,7 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
+   "id": "7153b922-5a92-49be-aa4b-b39f010be095",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.feature import VectorAssembler, StringIndexer\n",
+    "from pyspark.ml.regression import RandomForestRegressor\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "from pyspark.ml.feature import VectorAssembler\n",
+    "from pyspark.ml.regression import GBTRegressor\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.ml import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "c4de6089-0596-491c-b979-31fd3e21a408",
    "metadata": {},
    "outputs": [
@@ -12,14 +28,14 @@
      "text": [
       "root\n",
       " |-- Sex: string (nullable = true)\n",
-      " |-- Length: string (nullable = true)\n",
-      " |-- Diameter: string (nullable = true)\n",
-      " |-- Height: string (nullable = true)\n",
-      " |-- Weight: string (nullable = true)\n",
-      " |-- Shucked Weight: string (nullable = true)\n",
-      " |-- Viscera Weight: string (nullable = true)\n",
-      " |-- Shell Weight: string (nullable = true)\n",
-      " |-- Age: string (nullable = true)\n",
+      " |-- Length: double (nullable = true)\n",
+      " |-- Diameter: double (nullable = true)\n",
+      " |-- Height: double (nullable = true)\n",
+      " |-- Weight: double (nullable = true)\n",
+      " |-- Shucked Weight: double (nullable = true)\n",
+      " |-- Viscera Weight: double (nullable = true)\n",
+      " |-- Shell Weight: double (nullable = true)\n",
+      " |-- Age: integer (nullable = true)\n",
       "\n",
       "+---+------+--------+------+-----------+--------------+--------------+------------+---+\n",
       "|Sex|Length|Diameter|Height|     Weight|Shucked Weight|Viscera Weight|Shell Weight|Age|\n",
@@ -30,7 +46,7 @@
       "|  F| 1.175|  0.8875|  0.25|13.48018725|    4.74854125|    2.28213475|   5.2446575| 10|\n",
       "|  I|0.8875|  0.6625|0.2125| 6.90310325|      3.458639|    1.48834875|     1.70097|  6|\n",
       "|  F|  1.55|  1.1625|  0.35| 28.6613445|    13.5794105|    6.76135575|   7.2291225|  8|\n",
-      "|  F|   1.3|       1| 0.325|17.70426275|     6.0951425|    5.85417175|    4.819415| 15|\n",
+      "|  F|   1.3|     1.0| 0.325|17.70426275|     6.0951425|    5.85417175|    4.819415| 15|\n",
       "|  M| 1.325|  1.0125| 0.375|23.57260925|      9.979024|     5.3013565|  7.15824875| 10|\n",
       "|  I|1.5875|    1.25|0.4125| 42.2124055|    20.2698925|    9.76640275| 10.24834425| 13|\n",
       "|  I|0.9125|  0.6875|0.3375|    6.80388|      3.061746|    1.26155275|  2.08368825|  7|\n",
@@ -51,14 +67,18 @@
     }
    ],
    "source": [
-    "DF = spark.read.option(\"sep\", \",\").option(\"header\", \"true\").csv(\"CrabAgePrediction.csv\")\n",
-    "DF.printSchema()\n",
-    "DF.show()"
+    "# Создание SparkSession\n",
+    "spark = SparkSession.builder.appName(\"CrabAgePrediction\").getOrCreate()\n",
+    "# Загружаем датасет\n",
+    "data = spark.read.csv(\"CrabAgePrediction.csv\", header = True, inferSchema = True)\n",
+    "\n",
+    "data.printSchema()\n",
+    "data.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "90fa70c4-5fb6-4a41-8f71-231cfd3c7f94",
    "metadata": {},
    "outputs": [
@@ -66,15 +86,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+------+--------+------+----------+--------------+--------------+------------+---+\n",
-      "|Sex|Length|Diameter|Height|    Weight|Shucked Weight|Viscera Weight|Shell Weight|Age|\n",
-      "+---+------+--------+------+----------+--------------+--------------+------------+---+\n",
-      "|  F|0.7625|  0.5625| 0.175|4.20990075|    1.65844575|    0.94970825|   1.2757275|  7|\n",
-      "|  F|0.8125|    0.65| 0.225|5.42892925|     2.4097075|      1.020582|    1.757669|  7|\n",
-      "|  F| 0.825|    0.65|   0.2|    5.6699|    1.77184375|      1.417475|    1.984465|  9|\n",
-      "+---+------+--------+------+----------+--------------+--------------+------------+---+\n",
-      "only showing top 3 rows\n",
-      "\n",
       "+---+------+--------+------+---------+--------------+--------------+------------+---+\n",
       "|Sex|Length|Diameter|Height|   Weight|Shucked Weight|Viscera Weight|Shell Weight|Age|\n",
       "+---+------+--------+------+---------+--------------+--------------+------------+---+\n",
@@ -83,55 +94,58 @@
       "|  F| 0.725|  0.5625|0.1875|  3.96893|    1.45999925|    0.66621325|     1.13398|  5|\n",
       "+---+------+--------+------+---------+--------------+--------------+------------+---+\n",
       "only showing top 3 rows\n",
-      "\n"
+      "\n",
+      "+---+------+--------+------+---------+--------------+--------------+------------+---+\n",
+      "|Sex|Length|Diameter|Height|   Weight|Shucked Weight|Viscera Weight|Shell Weight|Age|\n",
+      "+---+------+--------+------+---------+--------------+--------------+------------+---+\n",
+      "|  F| 0.825|    0.65|   0.2|   5.6699|    1.77184375|      1.417475|    1.984465|  9|\n",
+      "|  F| 0.875|  0.6875|0.1625|5.8116475|    2.11203775|    1.31825175|    1.984465| 10|\n",
+      "|  F| 0.925|  0.6875|   0.2|6.4353365|     2.6365035|    1.77184375|    1.984465|  8|\n",
+      "+---+------+--------+------+---------+--------------+--------------+------------+---+\n",
+      "only showing top 3 rows\n",
+      "\n",
+      "2739\n",
+      "1154\n"
      ]
     }
    ],
    "source": [
-    "weights=[0.7, 0.3]\n",
-    "train, test = DF.randomSplit(weights)\n",
+    "# Преобразуем Пол краба в числа\n",
+    "indexer = StringIndexer(inputCol=\"Sex\", outputCol=\"SexIndex\")\n",
+    "# Преобразовываем данные. Начинаем с выбора признаков\n",
+    "features = [\"SexIndex\", \"Length\", \"Diameter\" , \"Height\", \"Weight\", \"Shucked Weight\", \"Viscera Weight\", \"Shell Weight\"]\n",
+    "# Создаем вектор этих признаков\n",
+    "assembler = VectorAssembler(inputCols=features, outputCol=\"features\")\n",
+    "# Разделяем данные на обучение и тест\n",
+    "(train, test) = data.randomSplit([0.7, 0.3], seed=12345)\n",
+    "\n",
     "train.show(3)\n",
-    "test.show(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "e8ddcfc7-147b-4acb-bc6c-34944c0eb972",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2770\n",
-      "1123\n"
-     ]
-    }
-   ],
-   "source": [
+    "test.show(3)\n",
+    "\n",
     "print(train.count())\n",
     "print(test.count())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "7153b922-5a92-49be-aa4b-b39f010be095",
+   "execution_count": 27,
+   "id": "b8ce2583-1527-4290-83e6-9067e711e0ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.ml.feature import VectorAssembler\n",
-    "from pyspark.ml.regression import RandomForestRegressor\n",
-    "from pyspark.ml.evaluation import RegressionEvaluator\n",
-    "from pyspark.ml import Pipeline\n",
-    "from pyspark.ml.feature import VectorAssembler, StringIndexer"
+    "# Создаем модель\n",
+    "rf = RandomForestRegressor(featuresCol = \"features\", labelCol= \"Age\")\n",
+    "# Создаем конвейер\n",
+    "pipelineRF = Pipeline(stages = [indexer, assembler, rf])\n",
+    "# Обучение модели\n",
+    "modelRF = pipelineRF.fit(train)\n",
+    "# Предсказание возраста на тестовой выборке\n",
+    "predictionsRF = modelRF.transform(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "595fc68b-e661-49b1-819b-96d3578250a8",
    "metadata": {},
    "outputs": [
@@ -170,39 +184,86 @@
     }
    ],
    "source": [
-    "# Создание SparkSession\n",
-    "spark = SparkSession.builder.appName(\"CrabAgePrediction\").getOrCreate()\n",
-    "# Загружаем датасет\n",
-    "data = spark.read.csv(\"CrabAgePrediction.csv\", header = True, inferSchema = True)\n",
-    "# Преобразуем Пол краба в числа\n",
-    "indexer = StringIndexer(inputCol=\"Sex\", outputCol=\"SexIndex\")\n",
-    "# Преобразовываем данные. Начинаем с выбора признаков\n",
-    "features = [\"SexIndex\", \"Length\", \"Diameter\" , \"Height\", \"Weight\", \"Shucked Weight\", \"Viscera Weight\", \"Shell Weight\"]\n",
-    "# Создаем вектор этих признаков\n",
-    "assembler = VectorAssembler(inputCols=features, outputCol=\"features\")\n",
-    "# Разделяем данные на обучение и тест\n",
-    "(trainingData, testData) = data.randomSplit([0.7, 0.3], seed=12345)\n",
-    "# Создаем модель\n",
-    "rf = RandomForestRegressor(featuresCol = \"features\", labelCol= \"Age\")\n",
-    "# Создаем конвейер\n",
-    "pipeline = Pipeline(stages = [indexer, assembler, rf])\n",
-    "# Обучение модели\n",
-    "model = pipeline.fit(trainingData)\n",
-    "# Предсказание возраста на тестовой выборке\n",
-    "predictions = model.transform(testData)\n",
     "# Оценка модели\n",
     "evaluator = RegressionEvaluator(labelCol = \"Age\", predictionCol = \"prediction\", metricName = \"rmse\")\n",
-    "rmse = evaluator.evaluate(predictions)\n",
+    "rmse = evaluator.evaluate(predictionsRF)\n",
     "print(\"Root Mean Squared Error (RMSE): %s\" % rmse)\n",
     "# Вывод результата и выключение SparkSession\n",
-    "predictions.select(\"Age\", \"prediction\").show()\n",
+    "predictionsRF.select(\"Age\", \"prediction\").show()\n",
+    "#spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb493e00-3593-4b2c-989a-cdf76e94e398",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Создание модели градиентного бустинга\n",
+    "gbt = GBTRegressor(featuresCol=\"features\", labelCol= \"Age\")\n",
+    "# Создание конвейера\n",
+    "pipelineGBT = Pipeline(stages = [indexer, assembler, gbt])\n",
+    "# Обучение модели\n",
+    "modelGBT = pipelineGBT.fit(train)\n",
+    "# Предсказание возраста на тестовой выборке\n",
+    "predictionsGBT = modelGBT.transform(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2e96de5b-957c-43bd-a0dc-7d2c217905a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error (RMSE): 2.2694767182967137\n",
+      "+---+------------------+\n",
+      "|Age|        prediction|\n",
+      "+---+------------------+\n",
+      "|  9|7.7375495134360985|\n",
+      "| 10|7.7375495134360985|\n",
+      "|  8|7.7375495134360985|\n",
+      "|  7| 9.629664301633323|\n",
+      "|  7| 8.173401460744234|\n",
+      "|  8| 8.649666277831063|\n",
+      "| 10| 8.788465602981512|\n",
+      "|  9| 9.891146804749734|\n",
+      "| 10| 8.649666277831063|\n",
+      "|  7| 9.891146804749734|\n",
+      "|  7| 9.624494300702326|\n",
+      "|  8| 9.891146804749734|\n",
+      "| 11| 9.891146804749734|\n",
+      "|  6| 9.624494300702326|\n",
+      "|  9|11.572535377407089|\n",
+      "|  9| 9.891146804749734|\n",
+      "| 13|10.428633260338977|\n",
+      "| 13|12.579037250175992|\n",
+      "|  8|  8.87359801336318|\n",
+      "| 13| 9.891146804749734|\n",
+      "+---+------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Оценка модели\n",
+    "evaluator = RegressionEvaluator(labelCol = \"Age\", predictionCol = \"prediction\", metricName = \"rmse\")\n",
+    "rmse = evaluator.evaluate(predictionsGBT)\n",
+    "print(\"Root Mean Squared Error (RMSE): %s\" % rmse)\n",
+    "# Вывод результата и выключение SparkSession\n",
+    "predictionsGBT.select(\"Age\", \"prediction\").show()\n",
     "spark.stop()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5597d602-0524-4ea1-993e-8869f5635811",
+   "id": "98ed5f72-8cfa-4239-a076-954890ba25a2",
    "metadata": {},
    "outputs": [],
    "source": []
